# metis-tensorflow

./: CMakeLists.txt  Makefile  README.md
include/: .buildconfig
tensorflow/: CMakeLists.txt  metis.cc
